--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>WebPage</title>
 <link rel="stylesheet" href="style.css" >
 <link rel="stylesheet" href="all.css" >
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <header>
