--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ content.Visual representations are defined by Cascading style Sheets (CSS)</p>
 
 <main>
 <h1>Introduction</h1>
-
+<!--------->
 <p>
 A HTML page may consist of potentially hundreds of elements which are then read by a web browser, interpreted</p><p>
 and rendered into human readable or audible content on the screen.
@@ -108,5 +108,10 @@ Tags: </p>
    <span> Designed By :</span> <span>Gautam Kumar</span>
    </div>
 </footer>
+<script>
+function show ("ggh"){
+  var x ="Thor";
+ var };
+</script>
 </body>
 </html>
